--- a/pom.xml
+++ b/pom.xml
@@ -13,11 +13,6 @@
 	<name>escolaQuery</name>
 	<description>Sistema para gerenciar as matriculas nas turmas de uma escola</description>
 
-	<properties>
-		<java.version>11</java.version>
-		<spring-cloud.version>Hoxton.SR3</spring-cloud.version>
-	</properties>
-
 	<dependencies>
 	
 		<!-- TJF -->
@@ -30,11 +25,27 @@
 			<groupId>com.totvs.tjf</groupId>
 			<artifactId>tjf-api-jpa</artifactId>
 		</dependency>
-		
-		<dependency>
-			<groupId>com.totvs.tjf</groupId>
-			<artifactId>tjf-repository-aggregate</artifactId>
-		</dependency>
+
+        <dependency>
+            <groupId>com.totvs.tjf</groupId>
+            <artifactId>tjf-core-validation</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.totvs.tjf</groupId>
+            <artifactId>tjf-api-context</artifactId>
+        </dependency>
+
+
+        <dependency>
+            <groupId>com.totvs.tjf</groupId>
+            <artifactId>tjf-security-web</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.totvs.tjf</groupId>
+            <artifactId>tjf-tenant-schema</artifactId>
+        </dependency>
 
 		<!-- Test -->
 		<dependency>
@@ -56,16 +67,6 @@
 		
 		<!-- Others -->
 		<dependency>
-			<groupId>com.totvs.tjf</groupId>
-			<artifactId>tjf-api-jpa</artifactId>
-		</dependency>
-		
-		<dependency>
-			<groupId>com.totvs.tjf</groupId>
-			<artifactId>tjf-repository-aggregate</artifactId>
-		</dependency>
-	
-		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-amqp</artifactId>
 		</dependency>
@@ -81,21 +82,7 @@
 			<groupId>org.flywaydb</groupId>
 			<artifactId>flyway-core</artifactId>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-stream</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-stream-binder-rabbit</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-devtools</artifactId>
-			<scope>runtime</scope>
-			<optional>true</optional>
-		</dependency>
+		
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
@@ -124,10 +111,28 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-stream</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-stream-binder-rabbit</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-stream-test-support</artifactId>
 			<scope>test</scope>
 		</dependency>
+
 	</dependencies>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+		</plugins>
+	</build>	
 
 	<repositories>
 		<repository>
@@ -144,25 +149,17 @@
 		
 	</repositories>
 
+
+
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
 				<groupId>org.springframework.cloud</groupId>
 				<artifactId>spring-cloud-dependencies</artifactId>
-				<version>${spring-cloud.version}</version>
+				<version>Greenwich.SR5</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
-
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
-		</plugins>
-	</build>
-
 </project>
